--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="text-center mb-10">
                     <h2 class="text-3xl font-bold text-stone-800">La Solución: El Método del Investigador Crítico</h2>
                      <p class="mt-4 text-lg text-stone-600 max-w-3xl mx-auto">
-                        La IA es una herramienta poderosa, pero la responsabilidad final es nuestra. En esta sección, presentamos un método práctico de tres pasos para usar la IA de forma segura y eficaz, convirtiéndonos en investigadores críticos que validamos la información antes de utilizarla.
+                        La IA es una herramienta poderosa, pero la responsabilidad final es nuestra. A continuación, presentamos un método práctico de tres pasos para usar la IA de forma segura y eficaz, convirtiéndonos en investigadores críticos que validamos la información antes de utilizarla.
                     </p>
                 </div>
 
@@ -108,7 +108,7 @@
                         </div>
                         <div class="details mt-4 text-stone-600">
                             <p>No asumas que la información es correcta. Usa los datos proporcionados por la IA (nombre del caso, autor, fecha, etc.) y busca la fuente original. Si no puedes encontrarla con la información exacta, es muy probable que sea una invención.</p>
-                            <p class="mt-2 p-3 bg-teal-50 text-teal-800 rounded-lg text-sm"><strong>Pro-Tip:</strong> Copia y pega la cita completa entre comillas en un motor de búsqueda. Si es real, a menudo encontrarás el documento original.</p>
+                            <p class="mt-2 p-3 bg-teal-50 text-teal-800 rounded-lg text-sm"><strong>Pro-Tip:</strong> Copia y pega la cita completa entre comillas en un motor de búsqueda (ej: Google). Si es real, a menudo encontrarás el documento original.</p>
                         </div>
                     </div>
 
@@ -137,7 +137,7 @@
                             <span class="icon-arrow text-2xl text-teal-600">&#9660;</span>
                         </div>
                         <div class="details mt-4 text-stone-600">
-                            <p>Una vez que encuentres la fuente original, léela por completo. Asegúrate de que el argumento que pretendes usar se sostiene en el texto. La IA puede citar un caso real, pero aplicar la conclusión de manera incorrecta o sacar un pasaje de contexto.</p>
+                            <p>Una vez que encuentres la fuente original, léela. Asegúrate de que el argumento que pretendes usar se sostiene en el texto. La IA puede citar un caso real, pero aplicar la conclusión de manera incorrecta o sacar de contexto alguna cita.</p>
                              <p class="mt-2 p-3 bg-teal-50 text-teal-800 rounded-lg text-sm"><strong>Pro-Tip:</strong> Pregúntate: ¿La fuente realmente apoya mi argumento, o la estoy forzando para que encaje? La honestidad intelectual es clave.</p>
                         </div>
                     </div>
@@ -147,9 +147,9 @@
             <!-- New Section: Gemini Interactive Features -->
             <section id="gemini-interactivo">
                 <div class="text-center mb-10">
-                    <h2 class="text-3xl font-bold text-stone-800">Ejemplos Interactivos con Gemini ✨</h2>
+                    <h2 class="text-3xl font-bold text-stone-800">✨Ejemplo Interactivo con Gemini✨</h2>
                     <p class="mt-4 text-lg text-stone-600 max-w-3xl mx-auto">
-                        Estas herramientas demuestran el poder y los desafíos de la IA en la práctica, ayudándote a visualizar y practicar los conceptos clave de la aplicación.
+                        Esta herramienta demuestra el poder y los desafíos de la IA en la práctica jurídica, ayudándote a visualizar y practicar los conceptos clave de la aplicación. 
                     </p>
                 </div>
 
@@ -160,7 +160,7 @@
                         <p class="text-stone-700 mb-6">Genera una cita legal ficticia sobre un tema específico para ver cómo una alucinación puede parecer convincente.</p>
                         
                         <!-- New input for the topic -->
-                        <textarea id="topic-input" rows="3" class="w-full p-3 rounded-lg border-2 border-stone-300 focus:outline-none focus:ring-2 focus:ring-teal-500 text-stone-900 placeholder-stone-500 resize-none transition-all duration-300 ease-in-out" placeholder="Introduce un tema (ej. 'despido por cuestión de género')."></textarea>
+                        <textarea id="topic-input" rows="3" class="w-full p-3 rounded-lg border-2 border-stone-300 focus:outline-none focus:ring-2 focus:ring-teal-500 text-stone-900 placeholder-stone-500 resize-none transition-all duration-300 ease-in-out" placeholder="Introduce un tema (ej. 'Crea un caso que argumente en favor de un trabajador que fue despedido por llevar su gato al trabajo')."></textarea>
 
                         <button id="generate-btn" class="bg-teal-600 text-white font-bold py-3 px-6 rounded-full shadow-lg hover:bg-teal-700 transition duration-300 ease-in-out transform hover:scale-105 mt-4">
                             Generar Alucinación ✨
@@ -240,4 +240,5 @@
     </script>
 </body>
 </html>
+
 
